--- a/CRM/CRM/Views/Shared/_Layout.cshtml
+++ b/CRM/CRM/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             padding-top: 20px;
         }
 
-            .sidebar a {
+            .sidebar a, .username {
                 color: #ecf0f1;
                 text-decoration: none;
                 display: block;
