--- a/CRM/CRM/Views/Account/CreateUser.cshtml
+++ b/CRM/CRM/Views/Account/CreateUser.cshtml
@@ -64,7 +64,7 @@
         @if (ViewBag.Message != null)
         {
             <div class="alert alert-success text-center mt-3">@ViewBag.Message</div>
-            <a class="btn btn-outline-info" href="/Account/Index"></a>
+            <a class="btn btn-outline-info" href="/Account/Index">Giriş yap</a>
         }
         @if (ViewBag.Error != null)
         {
