--- a/CRM/CRM/Views/Home/Index.cshtml
+++ b/CRM/CRM/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                 <button type="submit" class="btn btn-sm btn-outline-danger">Çıkış Yap</button>
             </form>
 
-            
+
 
         </nav>
         <main class="col-md-10 p-4">
@@ -47,7 +47,7 @@
                 <div class="col-md-4 mt-2">
                     <div class="card text-center p-3">
                         <h4>Tamamlanan Görevler</h4>
-                        <p class="display-6">58</p>
+                        <p class="display-6">@ViewBag.ComplatedTotalTasks</p>
                     </div>
                 </div>
             </div>
