--- a/CRM/CRM/Views/Task/Index.cshtml
+++ b/CRM/CRM/Views/Task/Index.cshtml
@@ -120,7 +120,7 @@
 
 
             <div class="col-md-3 mt-2">
-                <h2 class="h2 text-cen">Tamamlandı</h2>
+                <h2 class="h2 text-center">Tamamlandı</h2>
                 @foreach (var item in Model)
                 {
                     @if (item.TaskStatus == "Tamamlandı")
