--- a/CRM/CRM/Views/Home/Index.cshtml
+++ b/CRM/CRM/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
             <a href="Home/Index">Dashboard</a>
             <a asp-controller="Product" asp-action="Index">Ürünler</a>
             <a href="#">Siparişler</a>
-            <a asp-controller="Supplier" asp-action="Index">Müşteriler</a>
-            <a href="#">Görevler</a>
+            <a asp-controller="Supplier" asp-action="Index">Cari</a>
+            <a asp-controller="Task" asp-action="Index">Görevler</a>
 
             <a asp-controller="Settings" asp-action="Index">Ayarlar</a>
 
@@ -34,7 +34,7 @@
             <div class="row mb-4">
                 <div class="col-md-4 mt-2">
                     <div class="card text-center p-3">
-                        <h4>Toplam Müşteri</h4>
+                        <h4>Toplam Cari</h4>
                         <p class="display-6">@ViewBag.TotalSupp</p>
                     </div>
                 </div>
