çek için düzenlemeler

--- a/CRM/CRM/Views/Home/Index.cshtml
+++ b/CRM/CRM/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
             <a href="Home/Index">Dashboard</a>
             <a asp-controller="Product" asp-action="Index">Ürünler</a>
             <a href="#">Siparişler</a>
+            <a asp-controller="Check" asp-action="Index">Çekler</a>
             <a asp-controller="Supplier" asp-action="Index">Cari</a>
             <a asp-controller="Task" asp-action="Index">Görevler</a>
 
